<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:orientation="vertical"
    android:padding="16dp"
    android:background="@android:color/background_light">

    <TextView
        android:id="@+id/status"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/cardview_dark_background"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/deviceName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/status"
        android:layout_marginTop="20dp"
        android:textColor="@color/cardview_dark_background"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/split"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:text="@string/split"
        android:textColor="@color/cardview_dark_background"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/HAR"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:text="@string/HAR"
        android:textColor="@color/cardview_dark_background"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/walkingTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:gravity="center_vertical"
        android:textColor="@color/cardview_dark_background"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/runningTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:layout_marginTop="20dp"
        android:textColor="@color/cardview_dark_background"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/lrbTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:layout_marginTop="20dp"
        android:textColor="@color/cardview_dark_background"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/hrbTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:gravity="center_vertical"
        android:textColor="@color/cardview_dark_background"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/split2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:text="@string/split"
        android:textColor="@color/cardview_dark_background"
        android:textSize="20sp" />

    <LinearLayout
        android:id="@+id/dataArea"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:layout_below="@id/hrbTextView"
        android:orientation="vertical"
        android:visibility="invisible">

        <TextView
            android:id="@+id/accel_label"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:text="@string/accel"
            android:textColor="@color/cardview_dark_background"
            android:textSize="20sp" />

        <LinearLayout
            android:id="@+id/accel_area"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/accel_label"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/accel_x"
                android:textColor="@color/cardview_dark_background"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/accel_x"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:width="50dp"
                android:text="@string/emptyText"
                android:textColor="@color/cardview_dark_background"
                android:textSize="20sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/accel_y"
                android:textColor="@color/cardview_dark_background"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/accel_y"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:width="50dp"
                android:text="@string/emptyText"
                android:textColor="@color/cardview_dark_background"
                android:textSize="20sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/accel_z"
                android:textColor="@color/cardview_dark_background"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/accel_z"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:width="50dp"
                android:text="@string/emptyText"
                android:textColor="@color/cardview_dark_background"
                android:textSize="20sp" />

        </LinearLayout>

        <TextView
            android:id="@+id/bvp_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/accel_area"
            android:layout_marginTop="20dp"
            android:text="@string/bvp_label"
            android:textColor="@color/cardview_dark_background"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/bvp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/bvp_label"
            android:text="@string/emptyText"
            android:textColor="@color/cardview_dark_background"
            android:textSize="20sp" />


        <TextView
            android:id="@+id/battery_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/bvp"
            android:layout_marginTop="20dp"
            android:text="@string/battery_label"
            android:textColor="@color/cardview_dark_background"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/battery"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/battery_label"
            android:text="@string/emptyText"
            android:textColor="@color/cardview_dark_background"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/wrist_status_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_below="@id/wrist_status_label"
            android:text="@string/emptyText"
            android:textColor="@color/cardview_dark_background"
            android:textSize="20sp" />


        <Button
            android:id="@+id/disconnectButton"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginTop="20dp"
            android:backgroundTint="#5F2ABD"
            android:text="STOP RECOGNITION"
            android:textColor="@color/white" />

    </LinearLayout>


</LinearLayout>
